--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -242,7 +242,7 @@ However vertical climate gradients within forests are known to be steeper than t
 ## Trait variation 
 
 
-Leaf traits are shaped on the basis of light and height and show different degrees of foliar plasticity in accordance with the intensity and availability of light which also optimize water uptake, heat and C uptake by leaves across forest vertical strata. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabalize in woody and herbaceous species [@niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves such as phytochromes among others mediate response to PAR, and ratio of red to far red radiation [R:FR] falling on the surface. This enables acclimation or avoidance response through development of necessary traits [Casal, 2013]. As a result, degrees of high irradiance gives rise to variations of sun-leaf traits  compared to degrees of low irradiance-- characterized by shade-- shapes variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also shapes leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
+Leaf traits are shaped on the basis of light and height and show different degrees of foliar plasticity in accordance with the intensity and availability of light which also optimizes water uptake, heat and C uptake by leaves across forest vertical strata. After the formation of leaves to integrated light, it takes 30-60 days for traits to stabalize in woody and herbaceous species [@niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves such as phytochromes among others mediate response to PAR, and ratio of red to far red radiation [R:FR] falling on the surface. This enables acclimation or avoidance response through development of necessary traits [Casal, 2013]. As a result, degrees of high irradiance gives rise to variations of sun-leaf traits  compared to degrees of low irradiance-- characterized by shade-- shapes variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006], which ultimately also shapes leaf structural, chemical and physiological traits as well [Keenan and Niinemets et al. 2016]. 
 
 Increasing number of studies point towards the importance for incorporating sun and shade in modelling leaf economic spectrum (LES) within-canopy gradient[@chenLeafEconomicsSpectrum2020a] because LES was 'built' using mainly sun (upper canopy) leaves; given the vastly different light environments at the bottom of the canopy (and that most leaves in the canopy are likely to be shade leaves) there is a strong research need to better characterise trait relationships and leaf responses through the whole vertical canopy [Keenan and Niinemets 2016]. However, there is also concern for ambiguity in simplified cateogorization of 'sun' and 'shade' leaves due to variation based on light within-canopy, across functional groups, in canopy gaps, height and ontogeny [@ishiiVariationIntracrownLeaf2018; @niinemetsWorldwideAnalysisWithincanopy2015] as well as geographically [@ishiiVariationIntracrownLeaf2018]. Classification for sun and shade tolerance rankings have been highlighted by multiple studies [Baker 1949; @niinemetsControversyTraitsConferring2006; Feng et al. 2018] such as from @niinemetsControversyTraitsConferring2006 are as follows: "The five-level scale used for shade tolerance (1,very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%". "Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered".[refs, -Martijn Slot]
 
