--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -686,6 +686,22 @@
   number = {7}
 }
 
+@article{cobleHowVerticalPatterns2016,
+  title = {How Vertical Patterns in Leaf Traits Shift Seasonally and the Implications for Modeling Canopy Photosynthesis in a Temperate Deciduous Forest},
+  author = {Coble, Adam P. and VanderWall, Brittany and Mau, Alida and Cavaleri, Molly A.},
+  date = {2016-09-01},
+  journaltitle = {Tree Physiology},
+  volume = {36},
+  pages = {1077--1091},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tpw043},
+  url = {https://doi.org/10.1093/treephys/tpw043},
+  urldate = {2021-01-11},
+  abstract = {Leaf functional traits are used in modeling forest canopy photosynthesis (Ac) due to strong correlations between photosynthetic capacity, leaf mass per area (LMA) and leaf nitrogen per area (Narea). Vertical distributions of these traits may change over time in temperate deciduous forests as a result of acclimation to light, which may result in seasonal changes in Ac. To assess both spatial and temporal variations in key traits, we measured vertical profiles of Narea and LMA from leaf expansion through leaf senescence in a sugar maple (Acer saccharum Marshall) forest. To investigate mechanisms behind coordinated changes in leaf morphology and function, we also measured vertical variation in leaf carbon isotope composition (δ13C), predawn turgor pressure, leaf water potential and osmotic potential. Finally, we assessed potential biases in Ac estimations by parameterizing models with and without vertical and seasonal Narea variations following leaf expansion. Our data are consistent with the hypothesis that hydrostatic constraints on leaf morphology drive the vertical increase in LMA with height early in the growing season; however, LMA in the upper canopy continued to increase over time during light acclimation, indicating that light is primarily driving gradients in LMA later in the growing season. Models with no seasonal variation in Narea overestimated Ac by up to 11\% early in the growing season, while models with no vertical variation in Narea overestimated Ac by up to 60\% throughout the season. According to the multilayer model, the upper 25\% of leaf area contributed to over 50\% of Ac, but when gradients of intercellular CO2, as estimated from δ13C, were accounted for, the upper 25\% of leaf area contributed to 26\% of total Ac. Our results suggest that ignoring vertical variation of key traits can lead to considerable overestimation of Ac.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ZUPKAPH8\\Coble et al. - 2016 - How vertical patterns in leaf traits shift seasona.pdf;C\:\\Users\\Me\\Zotero\\storage\\C5NV6UHI\\2465960.html},
+  number = {9}
+}
+
 @article{cobleHowVerticalPatterns2016a,
   title = {How Vertical Patterns in Leaf Traits Shift Seasonally and the Implications for Modeling Canopy Photosynthesis in a Temperate Deciduous Forest},
   author = {Coble, Adam P. and VanderWall, Brittany and Mau, Alida and Cavaleri, Molly A.},
@@ -720,6 +736,21 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\5DJ96FGA\\Coble et al. - 2016 - How vertical patterns in leaf traits shift seasona.pdf;C\:\\Users\\Me\\Zotero\\storage\\ZXGL2AYI\\2465960.html},
   langid = {english},
   number = {9}
+}
+
+@article{cobleLightAcclimationOptimizes2015,
+  title = {Light Acclimation Optimizes Leaf Functional Traits despite Height-Related Constraints in a Canopy Shading Experiment},
+  author = {Coble, Adam P. and Cavaleri, Molly A.},
+  date = {2015},
+  journaltitle = {Oecologia},
+  volume = {177},
+  pages = {1131--1143},
+  publisher = {{[Springer, International Association for Ecology]}},
+  issn = {0029-8549},
+  abstract = {Within-canopy gradients of leaf functional traits have been linked to both light availability and vertical gradients in leaf water potential. While observational studies can reveal patterns in leaf traits, within-canopy experimental manipulations can provide mechanistic insight to tease apart multiple interacting drivers. Our objectives were to disentangle effects of height and light environment on leaf functional traits by experimentally shading branches along vertical gradients within a sugar maple (Acer saccharum) forest. Shading reduced leaf mass per area (LMA), leaf density, area-based leaf nitrogen (Narea), and carbon:nitrogen (C:N) ratio, and increased mass-based leaf nitrogen (Nmass), highlighting the importance of light availability on leaf morphology and chemistry. Early in the growing season, midday leaf water potential (ψmid) LMA, and Narea were driven primarily by height; later in the growing season, light became the most important driver for LMA and Narea. Carbon isotope composition (δ¹³C) displayed strong, linear correlations with height throughout the growing season, but did not change with shading, implying that height is more influential than light on water use efficiency and stomatal behavior. LMA, leaf density, Nmass, C:N ratio, and δ¹³C all changed seasonally, suggesting that leaf ageing effects on leaf functional traits are equally as important as microclimatic conditions. Overall, our results indicate that: (1) stomatal sensitivity to vapor pressure deficit or ψmid constrains the supply of CO₂ to leaves at higher heights, independent of light environment, and (2) LMA and Narea distributions become functionally optimized through morphological acclimation to light with increasing leafage despite height-related constraints.},
+  eprint = {43672565},
+  eprinttype = {jstor},
+  number = {4}
 }
 
 @article{cobleLightDrivesVertical2014a,
@@ -1129,6 +1160,25 @@
   number = {1}
 }
 
+@article{fajardoTemperateRainForest2016,
+  title = {Temperate Rain Forest Species Partition Fine-Scale Gradients in Light Availability Based on Their Leaf Mass per Area ({{LMA}})},
+  author = {Fajardo, Alex and Siefert, Andrew},
+  date = {2016-12},
+  journaltitle = {Ann Bot},
+  volume = {118},
+  pages = {1307--1315},
+  issn = {1095-8290},
+  doi = {10.1093/aob/mcw184},
+  abstract = {BACKGROUND AND AIMS: Ecologists are increasingly using plant functional traits to predict community assembly, but few studies have linked functional traits to species' responses to fine-scale resource gradients. In this study, it was tested whether saplings of woody species partition fine-scale gradients in light availability based on their leaf mass per area (LMA) in three temperate rain forests and one Mediterranean forest in southern Chile. METHODS: LMA was measured under field conditions of all woody species contained in approx. 60 plots of 2 m2 in each site, and light availability, computed as the gap light index (GLI), was determined. For each site, species' pairwise differences in mean LMA (Δ LMA) and abundance-weighted mean GLI (Δ light response) of 2 m2 plots were calculated and it was tested whether they were positively related using Mantel tests, i.e. if species with different LMA values differed in their response to light availability. Additionally linear models were fitted to the relationship between plot-level mean LMA and GLI across plots for each site. KEY RESULTS: A positive and significant relationship was found between species' pairwise differences in mean LMA and differences in light response across species for all temperate rain forests, but not for the Mediterranean forest. The results also indicated a significant positive interspecific link between LMA and light availability for all forests. This is in contrast to what is traditionally reported and to expectations from the leaf economics spectrum. CONCLUSIONS: In environments subjected to light limitation, interspecific differences in a leaf trait (LMA) can explain the fine-scale partitioning of light availability gradients by woody plant species. This niche partitioning potentially facilitates species coexistence at the within-community level. The high frequency of evergreen shade-intolerant species in these forests may explain the positive correlation between light availability and LMA.},
+  eprint = {27604280},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JMRGMYSW\\Fajardo and Siefert - 2016 - Temperate rain forest species partition fine-scale.pdf},
+  keywords = {Adaptation; Physiological,Community assembly,Ecosystem,fine-scale environmental gradients,Mediterranean forest,Patagonia,plant functional traits,Plant Leaves,Plants,Rainforest,species coexistence,Sunlight,temperate rain forest,trait-based approach},
+  langid = {english},
+  number = {7},
+  pmcid = {PMC5155601}
+}
+
 @article{falsterLeafSizeAngle2003,
   title = {Leaf Size and Angle Vary Widely across Species: What Consequences for Light Interception?},
   shorttitle = {Leaf Size and Angle Vary Widely across Species},
@@ -1262,6 +1312,23 @@
   eprint = {30324021},
   eprinttype = {pmid},
   file = {C\:\\Users\\Me\\Zotero\\storage\\XVJ6RRTP\\Feng et al. - 2018 - Comparing shade tolerance measures of woody forest.pdf},
+  pmcid = {PMC6183557}
+}
+
+@article{fengComparingShadeTolerance2018a,
+  title = {Comparing Shade Tolerance Measures of Woody Forest Species},
+  author = {Feng, Jiayi and Zhao, Kangning and He, Dong and Fang, Suqin and Lee, TienMing and Chu, Chengjin and He, Fangliang},
+  date = {2018-10-09},
+  journaltitle = {PeerJ},
+  volume = {6},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.5736},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6183557/},
+  urldate = {2021-01-11},
+  abstract = {Shade tolerance, the minimum light requirement for plant survival, is a key trait for understanding community assembly and forest dynamics. However, it is poorly defined for tree species to date. Current methods of measuring shade tolerance vary considerably in their performance. For instance, some measures of shade tolerance are unreliable except under some specific conditions. Therefore, it is necessary to compare the performance of these methods to provide guidance of choosing appropriate shade tolerance measures in future studies. We collected a large dataset of light traits and other life history traits for 137 understory wood species in a subtropical forest and tested the performance of five commonly used shade-tolerance indices. Results showed that all the shade-tolerance measures, except the low-light abundance index, performed poorly in distinguishing and ranking shade tolerance of the tested species. The shade tolerance quantified by the low-light abundance was consistent with empirical classification of shade-tolerance/intolerance groups and successional seral stages of species. Comparison of the shade tolerance between trees of different diameter at breast height (DBH) or height classes further confirmed the reliability of low-light abundance. We conclude that low-light abundance is the most objective and practical of the five most commonly-used methods for measuring and ranking shade tolerance of understory wood species in our study forest, and likely in other forests as well. The simplicity of the method should greatly facilitate the assessment of light niche differentiation between species and thus contribute to understanding coexistence of tree species in forests.},
+  eprint = {30324021},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\2AARCVEW\\Feng et al. - 2018 - Comparing shade tolerance measures of woody forest.pdf},
   pmcid = {PMC6183557}
 }
 
@@ -1624,6 +1691,12 @@
   number = {4}
 }
 
+@online{InteractionsWaterStress,
+  title = {Interactions between Water Stress, Sun‐shade Acclimation, Heat Tolerance and Photoinhibition in the Sclerophyll {{Heteromeles}} Arbutifolia - {{VALLADARES}} - 1997 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1046/j.1365-3040.1997.d01-8.x},
+  urldate = {2021-01-11}
+}
+
 @article{irmakScalingLeafStomatal2008,
   title = {On the Scaling up Leaf Stomatal Resistance to Canopy Resistance Using Photosynthetic Photon Flux Density},
   author = {Irmak, S. and Mutiibwa, D. and Irmak, A. and Arkebauer, T. J. and Weiss, A. and Martin, D. L. and Eisenhauer, D. E.},
@@ -1856,6 +1929,23 @@
   keywords = {acclimation,drought,elevated atmospheric CO2 concentration,Eucalyptus pilularis,Eucalyptus populnea,plant traits},
   langid = {english},
   number = {4}
+}
+
+@article{kenzoHeightrelatedChangesLeaf2015,
+  title = {Height-Related Changes in Leaf Photosynthetic Traits in Diverse {{Bornean}} Tropical Rain Forest Trees},
+  author = {Kenzo, Tanaka and Inoue, Yuta and Yoshimura, Mitsunori and Yamashita, Megumi and Tanaka-Oda, Ayumi and Ichie, Tomoaki},
+  date = {2015-01-01},
+  journaltitle = {Oecologia},
+  volume = {177},
+  pages = {191--202},
+  issn = {1432-1939},
+  doi = {10.1007/s00442-014-3126-0},
+  url = {https://doi.org/10.1007/s00442-014-3126-0},
+  urldate = {2021-01-11},
+  abstract = {Knowledge of variations in morphophysiological leaf traits with forest height is essential for quantifying carbon and water fluxes from forest ecosystems. Here, we examined changes in leaf traits with forest height in diverse tree species and their role in environmental acclimation in a tropical rain forest in Borneo that does not experience dry spells. Height-related changes in leaf physiological and morphological traits [e.g., maximum photosynthetic rate (Amax), stomatal conductance (gs), dark respiration rate (Rd), carbon isotope ratio (δ13C), nitrogen (N) content, and leaf mass per area (LMA)] from understory to emergent trees were investigated in 104 species in 29 families. We found that many leaf area-based physiological traits (e.g., Amax-area, Rd, gs), N, δ13C, and LMA increased linearly with tree height, while leaf mass-based physiological traits (e.g., Amax-mass) only increased slightly. These patterns differed from other biomes such as temperate and tropical dry forests, where trees usually show decreased photosynthetic capacity (e.g., Amax-area, Amax-mass) with height. Increases in photosynthetic capacity, LMA, and δ13C are favored under bright and dry upper canopy conditions with higher photosynthetic productivity and drought tolerance, whereas lower Rd and LMA may improve shade tolerance in lower canopy trees. Rapid recovery of leaf midday water potential to theoretical gravity potential during the night supports the idea that the majority of trees do not suffer from strong drought stress. Overall, leaf area-based photosynthetic traits were associated with tree height and the degree of leaf drought stress, even in diverse tropical rain forest trees.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SIDHQN62\\Kenzo et al. - 2015 - Height-related changes in leaf photosynthetic trai.pdf},
+  langid = {english},
+  number = {1}
 }
 
 @article{koike_leaf_2001,
@@ -4719,6 +4809,25 @@
   keywords = {climate change,leaf economics spectrum,lianas,photosynthetic temperature response,plant functional traits,stomatal conductance,thermal acclimation,tropical forest},
   langid = {english},
   number = {3}
+}
+
+@article{slotTraitbasedScalingTemperaturedependent2014,
+  title = {Trait-Based Scaling of Temperature-Dependent Foliar Respiration in a Species-Rich Tropical Forest Canopy},
+  author = {Slot, Martijn and Rey‐Sánchez, Camilo and Winter, Klaus and Kitajima, Kaoru},
+  date = {2014},
+  journaltitle = {Functional Ecology},
+  volume = {28},
+  pages = {1074--1086},
+  issn = {1365-2435},
+  doi = {10.1111/1365-2435.12263},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/abs/10.1111/1365-2435.12263},
+  urldate = {2021-01-11},
+  abstract = {The scarcity of empirical data on leaf respiration (R) and its temperature sensitivity (e.g. Q10, defined as the proportional increase in R per 10 °C warming) causes uncertainty in current estimates of net primary productivity of tropical forests. We measured temperature response curves of R on 123 upper-canopy leaves of 28 species of trees and lianas from a tropical forest in Panama and analysed variations in R and Q10 in relation to other leaf functional traits. Respiration rates per leaf area at 25 °C (RA) varied widely among species and were significantly higher in trees than in lianas. RA was best predicted by a multiple regression model containing leaf phosphorus concentration, photosynthetic capacity and leaf mass per area (r2 = 0·64). The mean Q10 value (2·4) was significantly higher than the commonly assumed value of 2·0. Q10 was best predicted by the combination of leaf carbohydrate concentration and growth form (trees vs lianas) (r2 = 0·26). The night-time leaf respiratory carbon flux from this tropical forest was calculated from these multiple regression models to be 4·5 Mg C ha−1 year−1, with an estimated additional 2·9 Mg C ha−1 year−1 being released by respiration during the day. Trait-based modelling has potential for estimating R, thus facilitating carbon flux estimation in species-rich tropical forests. However, in contrast to global analyses, leaf phosphorus content was the most important correlate of R and not leaf nitrogen, so calibration of trait models to the tropics will be important. Leaf traits are poor predictors of Q10 values, and more empirical data on the temperature sensitivity of respiration are critically needed to further improve our ability to scale temperature-dependent respiration in species-rich tropical forests.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/1365-2435.12263},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XBADQFDL\\Slot et al. - 2014 - Trait-based scaling of temperature-dependent folia.pdf;C\:\\Users\\Me\\Zotero\\storage\\C3YDYV5K\\1365-2435.html},
+  keywords = {carbon flux,climate change,gas exchange,leaf functional traits,NPP,Panama,Q10,temperature response of respiration},
+  langid = {english},
+  number = {5}
 }
 
 @article{smith_temperature_1977,
